# Samsung-Remote

./: .env.example  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShortcuts.tsx  DPad.tsx  VolumeControls.tsx  YouTubeInput.tsx
